# maf-copilotkit-agui-hitl-mre

./: .gitignore  README.md  pyproject.toml
frontend/: .env.example  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
scripts/: __init__.py  dev.sh  probe_agui_contract.py
src/hitl_mre/: __init__.py  app.py
