[project]
name = "maf-copilotkit-agui-hitl-mre"
version = "0.1.0"
description = "Minimal repro for CopilotKit interrupt/HITL hooks with Microsoft Agent Framework AG-UI workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-framework-ag-ui==1.0.0b260212",
    "agent-framework-core==1.0.0b260212",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
hitl-mre-server = "hitl_mre.app:main"
hitl-mre-probe = "scripts.probe_agui_contract:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hitl_mre", "scripts"]
