[project]
name = "maf-copilotkit-agui-hitl-mre"
version = "0.1.0"
description = "Minimal repro for CopilotKit interrupt/HITL hooks with Microsoft Agent Framework AG-UI workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-framework-ag-ui==1.0.0rc7",
    "agent-framework-core==1.10.0",
    "fastapi==0.138.0",
    "httpx>=0.28.1",
    "uvicorn==0.49.0",
]

[project.scripts]
hitl-mre-server = "hitl_mre.app:main"

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hitl_mre"]
